# experiments

./: .gitattributes  .gitignore  README.md  out.txt
2021/: 2021-11.codespaces.local.md  2021-11.cuda.md  2021-11.experiments.CUDA.md  2021-11.experiments.Codespaces.local.md  2021-12.codespaces.aifx.local.md  2021-12.codespaces.remote.md  2021-12.experiments.Codespaces.aifx.local.md  2021-12.experiments.Codespaces.remote.md
2021/2021-11.cuda/: add.cu  add_grid.cu
2021/2021-11.experiments.CUDA/: add.cpp  add.cu  add_block.cu  add_grid.cu
2021/2021-11.experiments.Codespaces.local/.devcontainer/: devcontainer.json
2021/2021-12.codespaces.aifx.local/.devcontainer/: Dockerfile  devcontainer.json
2022/: 2022-01.cross.cloud.storage.md
2024/: 2024-09.netspeed.md
2024/2024-09.netspeed/: netspeed_client.py  netspeed_server.py
2025/2025-02/: outlook-backup.ps1
2025/2025-02.outlook.backup/: outlook-backup.ps1
2025/2025-09/: README.md  seed.iso
2025/2025-09.allow.list.enforcement/: readme.md
2025/2025-09.amazon.linux.hyper-v/: README.md  amazon.linux.config.bash  amazon.linux.extras.bash  amazon.linux.hyper-v.create.ps1  amazon.linux.hyper-v.download.ps1  amazon.linux.tools.bash  seed.iso  vmcreate-common.psm1  vmcreate.ps1
2025/2025-09.amazon.linux.hyper-v/seedconfig/: meta-data  user-data
2025/2025-09.amazon.linux.hyper-v/vmconfig/: meta-data  user-data
2025/2025-09.menu.server/: README.md  WebServer.ps1
2025/2025-09.menu.server/content/: index.html  scripts.js  styles.css
2025/2025-11.mevir/: .gitignore  README.md  manifest.json  package-lock.json  package.json  popup.css  popup.html  tsconfig.json  webpack.config.js
2025/2025-11.mevir/scripts/: create-placeholder-icons.js  generate-icons.js  package-extension.js
2025/2025-11.mevir/src/: api.ts  background.ts  (+5 more)
2025/2025-11.ordem/: .gitignore  DIAGNOSTIC-REFERENCE.txt  DIAGNOSTICS.md  README.md  README.ordem.txt  TODO.md  TROUBLESHOOTING.md  VCRUNTIME-FIX.md  run-ordem.ps1
2025/2025-11.ordem/bazel/: BUILD.bazel
2025/2025-11.ordem/services/retrieve/: Cargo.toml  rust-toolchain.toml
2025/2025-11.ordem/services/retrieve/src/: main.rs
2025/2025-11.progresso/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  README.progresso.txt  TODO.md  TROUBLESHOOTING.md  run-progresso.ps1
2025/2025-11.progresso/bazel/: BUILD.bazel
2025/2025-11.progresso/scripts/: build-all.ps1  check-dependencies.psm1  clean-all.ps1  dist-all.ps1  install-dependencies.ps1  show-dependencies.ps1
2025/2025-11.progresso/services/progresso_service/: Cargo.toml  README.md  rust-toolchain.toml
2025/2025-11.progresso/services/progresso_service/.cargo/: config.toml
2025/2025-11.progresso/services/progresso_service/examples/: harness.rs
2025/2025-11.progresso/services/progresso_service/scripts/: install-service.ps1  uninstall-service.ps1
2025/2025-11.progresso/services/progresso_service/src/: lib.rs  main.rs  service_ctrl.rs
2025/2025-11.progresso/services/progresso_service/tests/: mock_sc.rs  xml_tests.rs
2026/2026-02.openclaw.in.amazon.linux.hyper-v/: README.md  amazon.linux.hyper-v.create.ps1  amazon.linux.hyper-v.download.ps1  amazon.linux.openclaw.bash  vmcreate-common.psm1  vmcreate.ps1
2026/2026-02.openclaw.in.amazon.linux.macos/: README.md  amazon.linux.macos.create.ps1  amazon.linux.macos.download.ps1  amazon.linux.openclaw.bash  seed.iso
2026/2026-02.ubuntu.env.macos/: README.md  config.plist.template  ubuntu.env.macos.create.ps1  ubuntu.env.openclaw.bash
2026/2026-03.screen-ocr/: README.md  Test-NewText.ps1
2026/2026-07.local.code.ai/: .gitignore  README.md  local.code.ai.ps1  prompts.txt
2026/2026-07.workflow/: .gitignore  README.md  REAL-ENGINES.md  order-workflow.ts  package-lock.json  package.json  run-lab.ps1  tsconfig.json
util/: .gitignore  Clear-JunkFile.ps1  New-Seed.ps1  README.md  Release-GpuResource.ps1  VM.common.psm1  check-dns-vs-porkbun.py  links-check.py  links-enum.py  lowercaseFolderTree.ps1  porkbun.py  porkbun.template.json  updateAll
util/vmconfig/: user-data
(+101 files in other folders)
