[package]
# Copyright (c) 2025 - Alisson Sol
name = "ordem_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11"
log = "0.4"
actix-cors = "0.7"
actix-files = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
