[package]
# Copyright (c) 2025 - Alisson Sol
name = "progresso_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
windows-service = "0.4"
quick-xml = { version = "0.27", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.6"

