[package]
# Copyright (c) 2025 - Alisson Sol
name = "progresso_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
sysinfo = "0.37"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
windows-service = "0.8"
quick-xml = { version = "0.38", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = true
codegen-units = 1
strip = true

